<resources>
    <string name="app_name">Student_Protect</string>
    <string name="title_activity_maps">Map</string>
    <string name="submit">送出</string>
    <string name="parent_name">姓名</string>
    <string name="parent_tel">電話</string>
    <string name="parent_username">使用者名稱</string>
    <string name="parent_password">密碼</string>
    <string name="parent_register">家長註冊</string>
    <string name="back_to_login">回登入頁面</string>
    <string name="login">登入</string>
    <string name="id">身分證末四碼</string>
    <string name="sid">學號</string>
    <string name="insert_student">新增學生</string>
    <string name="title_activity_real_location">RealLocation</string>
</resources>
