<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/signup"
    tools:context=".AddStudent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="70dp"
        android:textSize="30dp"
        android:textColor="#FFFFFF"
        android:text="@string/insert_student" />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="55dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:textSize="15dp"
            android:text="@string/sid" />

        <EditText
            android:id="@+id/editText_sid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="7"
            android:hint="406262XXX"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="55dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:textSize="15dp"
            android:text="@string/id" />

        <EditText
            android:id="@+id/editText_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="7"
            android:hint="1234"
            android:inputType="textPersonName" />
    </LinearLayout>



    <Button
        android:id="@+id/submit"
        android:text="@string/submit"
        android:textColor="#000000"
        android:textSize="15dp"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="100dp"
        android:layout_gravity="center"
        android:background="@drawable/buttonshape2"
        android:shadowColor="#E3E2E1"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>


</LinearLayout>