<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="150dp"
        android:textSize="30dp"
        android:textColor="#ff5e9cff"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="55dp"
        android:layout_marginTop="17dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/parent_username"
            android:textColor="#000000"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/editText_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="7"
            android:hint="USERNAME"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="85dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/parent_password"
            android:textColor="#000000"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="6"
            android:hint="PASSWORD"
            android:inputType="textPassword" />
    </LinearLayout>


    <Button
        android:id="@+id/login"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="120dp"
        android:layout_gravity="center"
        android:background="@drawable/buttonshape"
        android:orientation="horizontal"
        android:shadowColor="#E3E2E1"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="15dp" />

    <Button
        android:id="@+id/parent_register"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:layout_gravity="center"
        android:background="@drawable/buttonshape"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:shadowColor="#E3E2E1"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/parent_register"
        android:textColor="#FFFFFF"
        android:textSize="15dp" />


</LinearLayout>